--- a/WorkWise/Pages/SingIN.cshtml
+++ b/WorkWise/Pages/SingIN.cshtml
@@ -25,6 +25,11 @@
                     <input type="password" placeholder="Enter your password">
                     <a href="/Forgot">Forgot password?</a>
                     <input type="button" class="button" value="Login">
+                    <a href="#" class="google-button">
+                        <span class="google-button-icon"></span>
+                        <span class="google-button-text">Увійти з Google</span>
+                    </a>
+
                 </form>
                 <div class="signup">
                     <span class="signup">
