--- a/WorkWise/wwwroot/css/Kabinet.css
+++ b/WorkWise/wwwroot/css/Kabinet.css
@@ -122,10 +122,10 @@
 
 .navbar {
     position: fixed;
-    color: #fff;
+    color: black;
     padding: 15px 20px;
     font-size: 25px;
-    background: #4070f4;
+    background: #11101d;
     cursor: pointer;
 }
 
@@ -147,4 +147,74 @@
         color: #11101d;
         font-size: 40px;
         text-align: center;
+    }
+
+/*-----------------*/
+
+.greeting {
+    font-weight: bold;
+    text-align: left;
+    margin-bottom: 20px;
+    margin-left: 10px;
+}
+
+.main {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.card-section {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.card {
+    background-color: #fff;
+    padding: 30px;
+    border-radius: 8px;
+    width: calc(33.33% - 20px);
+    margin-top: 50px; 
+    margin-bottom: 20px;
+    box-sizing: border-box;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    margin-left: 10px; /* Додайте відступ зліва */
+}
+
+    .card:nth-child(3n+1) {
+        margin-right: 20px;
+    }
+
+    .card:nth-child(3n) {
+        margin-left: 20px;
+    }
+
+    .card h2 {
+        margin-top: 0;
+    }
+
+.buttons {
+    margin-left: 10px;
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 20px;
+    width: 100%;
+}
+
+.html-button,
+.css-button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 15px 0;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;  
+    margin-right: 10px;
+    flex-grow: 1;
+}
+
+    .html-button:hover,
+    .css-button:hover {
+        background-color: #45a049;
     }
